test/fail/arrayinit.min
program
start
    array x[3] := 1, 2, 3;
end
